--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title:             Clean Blog
-email:             colombo.fono@gmail.com
+title:             Me olvide el nombre
+email:             Hakuna.Matata@gmail.com
 description:       A Blog Theme by Start Bootstrap
-author:            Marina Colombo
+author:            Hakuna Matata
 baseurl:           "/"
 url:               "http://blackrockdigital.github.io"
 
