--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:             Me olvide el nombre
+title:             Relatos del camino
 email:             Hakuna.Matata@gmail.com
 description:       A Blog Theme by Start Bootstrap
 author:            Hakuna Matata
