--- a/img/posts/china/.picasaoriginals/.picasa.ini
+++ b/img/posts/china/.picasaoriginals/.picasa.ini
@@ -1,4 +1,4 @@
-[IMG-20190313-WA0052.jpeg]
+[cuaderno.jpeg]
 filters=crop64=1,1f81a18ffffffff;
 crop=rect64(1f81a18ffffffff)
 moddate=a5f363cc06e7d401
