--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:             Relatos del camino
 email:             Hakuna.Matata@gmail.com
-description:       Sucesos sobre el fluir
+description:       
 author:            Hakuna Matata
 baseurl:           "/"
 url:               "http://blackrockdigital.github.io"
