--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ baseurl:           "/"
 url:               "http://blackrockdigital.github.io"
 
 # Social Profiles
-twitter_username:  SBootstrap
-github_username:   BlackrockDigital
-facebook_username: StartBootstrap
+#twitter_username:  SBootstrap
+#github_username:   BlackrockDigital
+#facebook_username: StartBootstrap
 
 # Build settings
 markdown:          kramdown
